# telegram

./: .gitignore  Cargo.toml  README.md
crates/framework/: Cargo.toml
crates/framework/examples/: dice.rs  game.rs  macro.rs  message.rs  playground.rs  poll.rs  send_dice.rs  send_game.rs  send_message.rs  send_poll.rs  send_venue.rs  venue.rs
crates/framework/src/: bots_api.rs  config.rs  dispatcher.rs  feature.rs  lib.rs  prelude.rs  state.rs  traits.rs
crates/framework/src/enums/: allowed_updates.rs  background_fill.rs  background_type.rs  chat_action.rs  chat_boost_source.rs  chat_member.rs  chat_uid.rs  clients.rs  emoji.rs  file_input.rs  inline_query_result.rs  input_media.rs  input_message_content.rs  input_paid_media.rs  maybe_inaccessible_message.rs  menu_button.rs  message_kind.rs  message_origin.rs  message_result.rs  messages.rs  mod.rs  paid_media.rs  passport_element_error.rs  reaction_type.rs  reply_markup.rs  revenue_withdrawal_state.rs  storage.rs  transaction_partner.rs  update_kind.rs  updates.rs
crates/framework/src/features/: animation.rs  audio.rs  business.rs  callback_query.rs  chat.rs  chat_actions.rs  commands.rs  contact.rs  dice.rs  document.rs  file.rs  forum.rs  game.rs  http_listen.rs  https_listen.rs  inline_query.rs  location.rs  media_group.rs  menu_button.rs  message.rs  mod.rs  my.rs  passport.rs  payments.rs  photo.rs  poll.rs  pooling.rs  star.rs  stickers.rs  user.rs  venue.rs  video.rs  video_note.rs  voice.rs  web_app.rs  webhook.rs
crates/framework/src/features/bots_api/: http_listen.rs  https_listen.rs  mod.rs  pooling.rs
crates/framework/src/features/geo/: location.rs  mod.rs  options.rs  venue.rs
crates/framework/src/features/media/: animation.rs  audio.rs  document.rs  media_group.rs  mod.rs  photo.rs  video.rs  video_note.rs  voice.rs
crates/framework/src/storages/: memory.rs
crates/framework/src/structs/: birthdate.rs  bot_command.rs  callback_query.rs  chat.rs  chat_boost.rs  chat_boost_removed.rs  chat_invite_link.rs  chat_join_request.rs  contact.rs  dice.rs  encrypted_credentials.rs  encrypted_passport_element.rs  file.rs  forum_topic.rs  game.rs  giveaway.rs  inline_query.rs  input_file.rs  keyboard_button.rs  link_preview_options.rs  location.rs  message.rs  message_entity.rs  message_id.rs  message_reaction_count_updated.rs  messages.rs  mod.rs  options.rs  order_info.rs  passport_file.rs  poll.rs  poll_answer.rs  poll_option.rs  reply_parameters.rs  shared_user.rs  shipping_address.rs  sticker.rs  switch_inline_query_chosen_chat.rs  text_quote.rs  update.rs  (+4 more)
crates/framework/src/structs/background_fills/: background_fill_freeform_gradient.rs  background_fill_gradient.rs  background_fill_solid.rs  mod.rs
crates/framework/src/structs/background_types/: background_type_chat_theme.rs  background_type_fill.rs  background_type_pattern.rs  background_type_wallpaper.rs  mod.rs
crates/framework/src/structs/business/: business_connection.rs  business_intro.rs  business_location.rs  business_message_deleted.rs  business_opening_hours.rs  business_opening_hours_interval.rs  mod.rs
crates/framework/src/structs/chat_boost_sources/: chat_boost_source_gift_code.rs  chat_boost_source_giveaway.rs  chat_boost_source_premium.rs  mod.rs
crates/framework/src/structs/chat_members/: chat_member_administrator.rs  chat_member_banned.rs  chat_member_left.rs  chat_member_member.rs  chat_member_owner.rs  chat_member_restricted.rs
crates/framework/src/structs/chats/: chat_administrator_rights.rs  chat_background.rs  chat_boost.rs  (+26 more)
crates/framework/src/traits/: animation.rs  audio.rs  bots_api.rs  business.rs  callback_query.rs  chat.rs  chat_action.rs  chat_actions.rs  commander.rs  contact.rs  dice.rs  dispatcher.rs  document.rs  file.rs  forum.rs  game.rs  inline.rs  invoice.rs  kind_dispatcher.rs  location.rs  media_group.rs  menu_button.rs  menu_buttons.rs  message.rs  mod.rs  my.rs  order.rs  params.rs  passport.rs  photo.rs  poll.rs  reply_markup.rs  sender.rs  star.rs  stickers.rs  storage.rs  user.rs  venue.rs  video.rs  video_note.rs  (+2 more)
crates/macros/: Cargo.toml
crates/macros/src/: bot_commands.rs  bot_states.rs  deref_inner.rs  from_inner.rs  from_remote.rs  from_remote_enum.rs  from_remote_struct.rs  into_remote_enum.rs  into_remote_struct.rs  lib.rs
crates/macros/src/helpers/: enum_visitor.rs  mod.rs  struct_visitor.rs
crates/macros/src/structs/: command.rs
crates/macros/src/visitors/: commands.rs
(+540 files in other folders)
