[package]
name = "telegram"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/khusnetdinov/telegram"
repository = "https://github.com/khusnetdinov/telegram"
authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]

[dependencies]
telegram_bots_api = { version = "0.71.0", features = ["async", "sync"] }

[[example]]
name = "playground"
path = "examples/playground.rs"
