[package]
name = "telegram_framework"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/khusnetdinov/telegram_framework"
repository = "https://github.com/khusnetdinov/telegram_framework"
authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]

[dependencies]
proc-macro2 = "1.0.79"

[dependencies.telegram_bots_api]
path = "../telegram_bots_api"
features = ["sync", "async"]

[dependencies.telegram_macros]
path = "../telegram_macros"

[[example]]
name = "playground"
path = "examples/playground.rs"
