[workspace]
members = ["crates/framework", "crates/macros"]
resolver = "2"

[workspace.package]
name = "telegram"
version = "0.1.0"
rust-version = "1.70"
edition = "2021"
license = "MIT"
homepage = "https://github.com/khusnetdinov/telegram_framework"
repository = "https://github.com/khusnetdinov/telegram_framework"
authors = ["Marat Khusnetdinov <khusnetdinov@gmail.com>"]

[workspace.dependencies]
