[package]
name = "telegram_framework"
version = "0.0.0"
edition = "2021"

[dependencies]
telegram_bots_api = { git = "https://github.com/khusnetdinov/telegram_bots_api/", features = ["all"] }
serde = { version = "1.0.199", features = ["derive"] }

telegram_macros = { path = "../macros" }
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]

[[example]]
name = "playground"
path = "examples/playground.rs"
