[package]
name = "telegram_framework"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "^4.5.4", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0.199", features = ["derive"] }
telegram_bots_api = { git = "https://github.com/khusnetdinov/telegram_bots_api/", features = ["all"] }
telegram_macros = { path = "../macros" }
tokio = "1.38.0"

[dev-dependencies]

[[example]]
name = "playground"
path = "examples/playground.rs"

[[example]]
name = "macro"
path = "examples/macro.rs"
