[package]
name = "telegram_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
#telegram_bots_api = { version = "0.72.0", features = ["all"] }
telegram_bots_api = { path = "../../../telegram_bots_api", features = ["sync", "async"] }
syn = { version = "2.0.53", features = ["extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff", "dissimilar"] }
