[package]
name = "telegram_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
telegram_bots_api = { version = "0.73.2", features = ["all"] }
syn = { version = "2.0.53", features = ["extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"
proc-macro-error = "1.0.4"
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff", "dissimilar"] }
