[package]
name = "telegram_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
proc-macro2 = "1.0.79"
proc-macro-error = "1.0.4"
serde = { version = "1.0.199", features = ["derive"] }
syn = { version = "2.0.53", features = ["extra-traits"] }
telegram_bots_api = { git = "https://github.com/khusnetdinov/telegram_bots_api/", features = ["all"] }

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff", "dissimilar"] }
